--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [gh-pages]
+    branches: [main] # Trigger only on pushes to main
 
 concurrency:
   group: "pages"
@@ -31,4 +31,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist # Vite outputs to 'dist'
+          publish_dir: ./dist
+          # Ensure the branch is explicitly set to gh-pages
+          publish_branch: gh-pages
